--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Site</title>
+    <title>hdned</title>
 
     <!-- Link para o favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -35,6 +35,7 @@
         /* Seções principais */
         main {
             padding: 2rem;
+            text-align: center; /* Centraliza o conteúdo */
         }
 
         /* Estilo do rodapé */
@@ -43,6 +44,24 @@
             color: white;
             padding: 1rem 0;
             text-align: center;
+        }
+
+        /* Estilo do botão */
+        .botao-link {
+            background-color: #4CAF50; /* Cor verde */
+            color: white;
+            padding: 15px 32px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none; /* Remove o sublinhado */
+            display: inline-block;
+            margin-top: 20px;
+        }
+
+        .botao-link:hover {
+            background-color: #45a049; /* Cor um pouco mais escura quando o mouse passa sobre o botão */
         }
     </style>
 </head>
@@ -53,15 +72,19 @@
     <main>
         <section>
             <h2>Sobre mim</h2>
-            <p>Este é o meu primeiro site usando HTML e CSS.</p>
+            <p></p>
         </section>
         <section>
             <h2>Meus Projetos</h2>
             <p>Aqui estão alguns dos meus projetos futuros!</p>
         </section>
+
+        <!-- Botão com link -->
+        <https://github.com/helloguyrewind/ViruCat-owo">Visite meu outro site</a>
     </main>
     <footer>
         <p>Feito com amor e dedicação. © 2024</p>
     </footer>
 </body>
 </html>
+
