--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
 
         <!-- Botão com link -->
-        <a href=https://github.com/helloguyrewind/ViruCat-owo/" class="botao-link" target="_blank">Visite meu outro site</a>
+        <a href=https://github.com/helloguyrewind/ViruCat-owo/ class="botao-link" target="_blank">Visite meu outro site</a>
     </main>
     <footer>
         <p>Feito com amor e dedicação. © 2024</p>
