--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <h2>Meus Projetos</h2>
             <p>Aqui estão alguns dos meus projetos futuros!</p>
         </section>
-
+<img src="https://pm1.narvii.com/6153/bf3c06fe92ddb835f0e4c79998e5707904a960f3_hq.jpg" alt="Descrição da imagem" width="500">
         <!-- Botão com link -->
-        <a href=https://hdnerdolagd.itch.io/bodyover/ class="botao-link" target="_blank">um jogo demo criado por mim</a>
+        <a href=https://hdnerdolaa.itch.io/underfavela class="botao-link" target="_blank">um jogo de undertale</a>
     </main>
     <footer>
         <p>Feito com amor e dedicação. © 2024</p>
