--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <h2>Meus Projetos</h2>
             <p>Aqui estão alguns dos meus projetos futuros!</p>
         </section>
-<img src="https://pm1.narvii.com/6153/bf3c06fe92ddb835f0e4c79998e5707904a960f3_hq.jpg" alt="Descrição da imagem" width="400">
+
       
-     
+     <iframe frameborder="0" src="https://itch.io/embed/3225793?bg_color=000000&amp;fg_color=ffffff&amp;link_color=f31313" width="552" height="167"><a href="https://hdnerdolaa.itch.io/underfavela">UNDERFAVELA by hdnerdolaa</a></iframe>
         <iframe frameborder="0" src="https://itch.io/embed/3232923?bg_color=0e1629&amp;fg_color=979ade&amp;link_color=0d1edf&amp;border_color=363636" width="552" height="167"><a href="https://hdnerdolaa.itch.io/sunbound">Sunbound by hdnerdolaa</a></iframe>
     </main>
     <footer>
