--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         /* Estilos do corpo do site */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #000000;
             color: #333;
             line-height: 1.6;
         }
