--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Link para o favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+<img src="pinto.jpg" alt="" width="500">
     <style>
         /* Reset básico */
         * {
@@ -19,7 +19,7 @@
         /* Estilos do corpo do site */
         body {
             font-family: Arial, sans-serif;
-            background-color: #000000;
+            background-color: #321961;
             color: #333;
             line-height: 1.6;
         }
