--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Link para o favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-<img src="pinto.jpg" alt="" width="500">
+<img src="pinto.png" alt="" width="500">
     <style>
         /* Reset básico */
         * {
