--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Link para o favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-<img src="pinto.png" alt="" width="500">
+
     <style>
         /* Reset básico */
         * {
@@ -67,7 +67,8 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao meu site!</h1>
+        <h1>Bem-vindo ao hdnerd!</h1
+                                    <img src="pinto.png" alt="" width="500">
     </header>
     <main>
         <section>
