--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hdned</title>
+    <title>hdnerd</title>
 
     <!-- Link para o favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -82,7 +82,8 @@
 
       
      <iframe frameborder="0" src="https://itch.io/embed/3225793?bg_color=000000&amp;fg_color=ffffff&amp;link_color=f31313" width="552" height="167"><a href="https://hdnerdolaa.itch.io/underfavela">UNDERFAVELA by hdnerdolaa</a></iframe>
-        <iframe frameborder="0" src="https://itch.io/embed/3232923?bg_color=0e1629&amp;fg_color=979ade&amp;link_color=0d1edf&amp;border_color=363636" width="552" height="167"><a href="https://hdnerdolaa.itch.io/sunbound">Sunbound by hdnerdolaa</a></iframe>
+       <iframe frameborder="0" src="https://itch.io/embed/3232923?bg_color=0e1629&amp;fg_color=979ade&amp;link_color=0d1edf&amp;border_color=363636" width="552" height="167"><a href="https://hdnerdolaa.itch.io/sunbound">Sunbound by hdnerdolaa</a></iframe>
+ <iframe frameborder="0" src="https://itch.io/embed/3237568?bg_color=ff0e02&amp;fg_color=55fc00&amp;link_color=fa5bda&amp;border_color=ff8585" width="552" height="167"><a href="https://hdnerdolaa.itch.io/flappy-berry-demake-kkkk">flappy berry demake kkkk by hdnerdolaa</a></iframe>
     </main>
     <footer>
         <p>Feito com amor e dedicação. © 2024</p>
