--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao hdnerd!</h1
-                                    <img src="pinto.png" alt="" width="500">
+        <h1>HDnerdola P. cool games</h1
+<img src="pinto.png" alt="" width="500">
     </header>
     <main>
         <section>
