--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>Aqui estão alguns dos meus projetos futuros!</p>
         </section>
 
-      
+      <iframe src="https://discordapp.com/widget?id=1330616718078382183&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
      <iframe frameborder="0" src="https://itch.io/embed/3225793?bg_color=000000&amp;fg_color=ffffff&amp;link_color=f31313" width="552" height="167"><a href="https://hdnerdolaa.itch.io/underfavela">UNDERFAVELA by hdnerdolaa</a></iframe>
        <iframe frameborder="0" src="https://itch.io/embed/3232923?bg_color=0e1629&amp;fg_color=979ade&amp;link_color=0d1edf&amp;border_color=363636" width="552" height="167"><a href="https://hdnerdolaa.itch.io/sunbound">Sunbound by hdnerdolaa</a></iframe>
  <iframe frameborder="0" src="https://itch.io/embed/3237568?bg_color=ff0e02&amp;fg_color=55fc00&amp;link_color=fa5bda&amp;border_color=ff8585" width="552" height="167"><a href="https://hdnerdolaa.itch.io/flappy-berry-demake-kkkk">flappy berry demake kkkk by hdnerdolaa</a></iframe>
