--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
      <iframe frameborder="0" src="https://itch.io/embed/3225793?bg_color=000000&amp;fg_color=ffffff&amp;link_color=f31313" width="552" height="167"><a href="https://hdnerdolaa.itch.io/underfavela">UNDERFAVELA by hdnerdolaa</a></iframe>
        <iframe frameborder="0" src="https://itch.io/embed/3232923?bg_color=0e1629&amp;fg_color=979ade&amp;link_color=0d1edf&amp;border_color=363636" width="552" height="167"><a href="https://hdnerdolaa.itch.io/sunbound">Sunbound by hdnerdolaa</a></iframe>
  <iframe frameborder="0" src="https://itch.io/embed/3237568?bg_color=ff0e02&amp;fg_color=55fc00&amp;link_color=fa5bda&amp;border_color=ff8585" width="552" height="167"><a href="https://hdnerdolaa.itch.io/flappy-berry-demake-kkkk">flappy berry demake kkkk by hdnerdolaa</a></iframe>
+   <blockquote class="pix-embed-wrap"><div class="pix-embed-activity" data-id="sr22535b49c2faws3" data-width="128" data-height="128" data-type="art" data-theme="light" data-show-edit="1">Pixilart Embed</div></blockquote><script async="async" src="https://www.pixilart.com/js/embed.js?v=1.0.4"></script>
     </main>
     <footer>
         <p>Feito com amor e dedicação. © 2024</p>
